--- a/browse.css
+++ b/browse.css
@@ -1,20 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 
-* { 
-    font-family: 'Montserrat';
-    color: rgb(132,126,129);
+body { 
+  font-family: 'Montserrat';
+  background-color: rgb(202, 216,226);
+  color: rgb(132,126,129);
 }
 
-.col-sm-4 {
+.btn {
+  border: 2px solid black;
+  border-radius: 400px;
+  background-color: rgb(242,242,242);
+  border-color: rgb(242,242,242);
+  padding: 14px 88px;
+  font-size: 16px;
+  color: rgb(132,126,129);
+}
+
+.btn:hover {
+  background-color: rgb(242,242,242);
+  border-color: rgb(242,242,242);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 1);
+  text-decoration: none;
+}
+
+footer {
   background-color: rgb(242,242,242);
 }
-  
-.col-sm-8 {
-  right: 0;
-  background-color: rgb(202, 216,226);
+
+#notes, #logo {
+  width: 80%;
+  margin-top:100px;
+  border-radius: 50px;
 }
 
-#logo {
-  margin-top: 3rem;
-  size: 40%;
+#description {
+  background-color: rgb(242,242,242);
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-bottom: 1%;
+  padding-top: 1%;
+}
+
+.home-text {
+  margin: auto;
+  justify-content: center;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
 }
