--- a/browse.css
+++ b/browse.css
@@ -2,52 +2,138 @@
 
 body { 
   font-family: 'Montserrat';
+  color: rgb(132,126,129);
+}
+
+.col-sm-4 {
+  background-color: rgb(242,242,242);
+}
+  
+.col-sm-8 {
+  right: 0;
   background-color: rgb(202, 216,226);
-  color: rgb(132,126,129);
 }
 
-.btn {
-  border: 2px solid black;
-  border-radius: 400px;
-  background-color: rgb(242,242,242);
-  border-color: rgb(242,242,242);
-  padding: 14px 88px;
-  font-size: 16px;
-  color: rgb(132,126,129);
+#logo {
+  margin-top: 3rem;
+  size: 40%;
 }
 
-.btn:hover {
-  background-color: rgb(242,242,242);
-  border-color: rgb(242,242,242);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 1);
-  text-decoration: none;
-}
-
-footer {
+.note-box {
+  margin: 10px 10px 10px;
+  width:20%;
+  border-radius: 20px;
   background-color: rgb(242,242,242);
 }
 
-#notes, #logo {
-  width: 80%;
-  margin-top:100px;
-  border-radius: 50px;
+.notes {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width:100%;
+  height:65%;
 }
 
-#description {
+.rating {
+  width: 60%;
+  float: left;
+  margin:0px 10px 10px 5px;
+}
+
+.thumb {
+  width: 10%;
+  margin-top: 5px;
+  margin-right: 10px;
+  float: right;
+}
+
+.form-range {
+  width: 300px;
+}
+
+.form-check-input {
+  width: 20px;
+  position: relative;
+  left: 20px;
+  vertical-align: middle;
+}
+
+.form-check-label {  
+  width: 200px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.btn:focus {
+  background-color: rgb(5, 77, 128);
+}
+
+.form-range {
+  width: 300px;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+.ck-button {
+    margin:4px;
+    background-color:#EFEFEF;
+    border-radius:4px;
+    border:1px solid #D0D0D0;
+    overflow:auto;
+    float:left;
+}
+
+.ck-button {
+    margin:4px;
+    background-color:#EFEFEF;
+    border-radius:4px;
+    border:1px solid #D0D0D0;
+    overflow:auto;
+    float:left;
+}
+
+
+.ck-button label {
+    float:left;
+    width:8.0em;
+    margin: 0;
+}
+
+.ck-button label span {
+    text-align:center;
+    padding:3px 0px;
+    display:block;
+}
+
+.ck-button label input {
+    position:absolute;
+    top:-20px;
+}
+
+.ck-button input:checked + span {
+    background-color:#CAD8E2;
+    color:#fff;
+}
+
+input[type="text"] {
+    display: block;
+    margin : 0 auto;
+    margin-bottom: -30px;
+}
+
+#grade {
+    margin-top: 150px;
+}
+
+#asdf > span {
+  display: block;
+  height: 20px;
   background-color: rgb(242,242,242);
-  margin: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  padding-bottom: 1%;
-  padding-top: 1%;
 }
 
-.home-text {
-  margin: auto;
-  justify-content: center;
-  text-align: center;
-}
-
-h1 {
-  text-align: center;
+embed {
+  padding-top: 15px;
+  /* outline-style: solid; */
 }
